Travis.yml update

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ after_script:
 - rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+env:
+  global:
+    secure: hI2O9vcpIHorUDyMiRl7xDxPt4ZwguBTnYC0kWNlDVk/qnBs+fzVXRKarKQqKeRIbTvhNktKm0qjrIltBNzPUHbI+WFS20nTzd1C0ugiS5LVbu44Nyn/tl4aiXx1A/L1kBkPzxlxHfFXMEdWKYPCdsBJeZiJ6BP88pm7Sn1UHtg=
