--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: hI2O9vcpIHorUDyMiRl7xDxPt4ZwguBTnYC0kWNlDVk/qnBs+fzVXRKarKQqKeRIbTvhNktKm0qjrIltBNzPUHbI+WFS20nTzd1C0ugiS5LVbu44Nyn/tl4aiXx1A/L1kBkPzxlxHfFXMEdWKYPCdsBJeZiJ6BP88pm7Sn1UHtg=
+    secure: QAKtU2BD4Z8oCCfRf0WAON74tzsBm1d8v8SA//ZgKd/RhXLJwzjmj00uEIGELEvDBZC8vu3TrUS4WYf/OJyAI/c2ZTpl8N+sCtZkaYvy5JDmb/QtTQey0sk++0zAqEOxeoj+nVUrr0H1oOxlMpBB0Vwy/7c54hN6vOos6wcRCxg=
