--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: QAKtU2BD4Z8oCCfRf0WAON74tzsBm1d8v8SA//ZgKd/RhXLJwzjmj00uEIGELEvDBZC8vu3TrUS4WYf/OJyAI/c2ZTpl8N+sCtZkaYvy5JDmb/QtTQey0sk++0zAqEOxeoj+nVUrr0H1oOxlMpBB0Vwy/7c54hN6vOos6wcRCxg=
+    secure: dGOSm/48nymkS0RbVbdN5vAUOFLYTqVeR4aXe9nnhGypBWeooUoux98Xx3owDm7DyDeodTyrlZtS0ErQA4zrizDkPZXR6FMZmEK8afb2LmRncJmiuSKsBwgxa7thwcuBgryI5uFhF7qlAm5wuBr9KkJMgtZwt+9WBiFwLNZzJSY=
